--- a/appsettings_example.json
+++ b/appsettings_example.json
@@ -1,6 +1,8 @@
 {
 
 	"Agility": {
+		"InstanceGuid": "your-guid",
+		"Locale": "your-locale",
 		"AuthToken": "your_oauth_token_from_https://mgmt.aglty.io/oauth/authorize"
 	}
 
